# hugtools

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.rst  pyproject.toml  setup.cfg  setup.py
docs/: conf.py  hugtools.html  hugtools.jupyter.html  hugtools.jupyter.rst  hugtools.nlp.html  hugtools.rst  index.html  index.rst  py-modindex.html
docs/_modules/: index.html
docs/_modules/hugtools/: jupyter.html  profiling.html
docs/_sources/: hugtools.nlp.rst.txt  index.rst.txt
docs/source/: conf.py  hugtools.ml.rst  hugtools.rst  index.rst  modules.rst
html/: .buildinfo  genindex.html  hugtools.html  hugtools.jupyter.html  hugtools.nlp.html  index.html  objects.inv  search.html  searchindex.js
html/_modules/hugtools/: nlp.html  util.html
html/_sources/: hugtools.rst.txt
html/_static/: documentation_options.js
hugtools/: __init__.py  math.py  multi.py
hugtools/ml/: labelstudio.py
src/hugtools/: __init__.py  _logging.py  _version.py  misc.py  profiling.py  util.py
src/hugtools/jupyter/: __init__.py
src/hugtools/ml/: labelstudio.py
src/hugtools/nlp/: __init__.py
tests/: test___init__.py  test_misc.py  test_util.py
tests/nlp/: test___init__.py
