[tool.poetry]
name = "hugtools"
version = "0.1.0"
description = ""
authors = ["Adam Huganir <adam@huganir.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
jupytext = "^1.9.1"
flake8 = "^3.8.4"
black = "^20.8b1"
isort = "^5.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
