[tool.poetry]
name = "hugtools"
version = "0.1.0-alpha.3"
description = "Some common tools that I have written over time"
authors = ["Adam Huganir <adam@huganir.com>"]
repository = "https://github.com/adam-huganir/hugtools"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
mypy = "^0.812"
isort = "^5.8.0"
pytest = "^6.2.4"
Sphinx = "^4.0.2"
pre-commit = "^2.13.0"
black = "^21.5b2"
sphinxawesome-theme = "^3.2.1"
ptpython = "^3.0.20"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py38']

[tool.pytest.ini]

